# GetExchRate

./: .env.sample  CODEOWNERS  LICENSE  README.md  docker-compose.yml
.github/workflows/: integration.yml  services-webapp.yml
services/dba/: servers.json
services/webapp/: .env.sample  Dockerfile  Taskfile.yml  Taskfile_windows.yml  pyproject.toml
services/webapp/alpha/: __init__.py  settings.py
services/webapp/config/: gunicorn.conf.py
services/webapp/tests/: test_favourite_languages.py
services/webapp/tests/alpha/: settings_test.py
services/webapp/tests/integration/: test_app.py
services/webapp/webapp/: asgi.py
