[tool.poetry]
authors = ["Jana Sergienko <jana_monkey@mail.ru>"]
description = "The template for building a web project."
license = "MIT"
name = "getexchrate"
version = "2023.03.01"


[tool.poetry.dependencies]
anyio = "^3.6.2"
asyncpg = "^0.27.0"
attrs = "^23.1.0"
gunicorn = "^20.1.0"
httpx = "^0.24.0"
orjson = "^3.8.10"
pendulum = "^2.1.2"
pydantic = "^1.10.7"
python = "3.10.9"
python-dotenv = "^1.0.0"
requests = "^2.28.2"
rich = "^13.3.4"
sentry-sdk = "^1.19.1"
structlog = "^23.1.0"
typer = "^0.7.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.27.0"
black = "^23.3.0"
coverage = {extras = ["toml"], version = "^7.2.3"}
devtools = {extras = ["pygments"], version = "^0.11.0"}
flake8 = "^6.0.0"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.3.23"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.12.0"
flake8-debugger = "^4.1.2"
flake8-executable = "^2.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-fixme = "^1.1.1"
flake8-isort = "^6.0.0"
flake8-multiline-containers = "^0.0.19"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^2.0.0"
flake8-print = "^5.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-simplify = "^0.20.0"
flake8-variables-names = "^0.0.5"
greenlet = "^2.0.2"
httpie = "^3.2.1"
ipython = "^8.12.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pep8-naming = "^0.13.3"
pytest = "^7.3.1"
pytest-anyio = "^0.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
types-requests = "^2.28.11.17"
watchfiles = "^0.19.0"


[tool.black]
line-length = 79
target-version = ["py310"]
include = '^.+\.pyi?$'
extend-exclude = '''
(
    .*\.local.*
    | .*\.idea.*
    | .*\.vscode.*
)
'''


[tool.isort]
force_single_line = true
line_length = 79
multi_line_output = 3
profile = "black"
skip = [
    ".local",
]


[tool.pytest.ini_options]
addopts = "--cov --cov-branch"
cache_dir = ".local/pytest/"
console_output_style = "count"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "functional",
    "integration",
    "unit",
]
testpaths = [
    "alpha",
    "tests",
]


[tool.mypy]
cache_dir = ".local/mypy/"
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude=[".local/*",]
files = ["alpha", "webapp", "tests",]
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = "3.10"
show_error_context = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
